# dpsk_v4_bioseq_agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: cloning_comparison.md  methodology.md  prompt_injection.md  seqqa_baseline.md  seqqa_comparison.md
docs/web/: README.md  flash-tool-vs-notool.html  index.html  monitor-dashboard-example.html  overview.html  seqqa.html
results/: cloning_code-agent_flash.json  cloning_code-agent_pro.json  cloning_no-tool_flash.json  cloning_no-tool_pro.json  seqqa_code-agent_flash.json  seqqa_code-agent_pro.json  seqqa_no-tool_flash.json  seqqa_no-tool_pro.json
src/dpsk_v4_bioseq_agent/: __init__.py  adaptive.py  agent.py  config.py  llm.py  run_cloning.py  run_seqqa.py  sandbox.py  scoring.py
src/dpsk_v4_bioseq_agent/monitor/: __init__.py  dashboard.py  progress.py
src/dpsk_v4_bioseq_agent/prompt_injection/: __init__.py  dnacode.py  restructure_prompt.py
tests/: test_adaptive.py  test_dnacode.py  test_sandbox.py
tools/: build_cloning_report.py
